# dorothy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN-clustering-fixes.md  README.md  docker-compose.yml  pyproject.toml
config/: sources.yaml
scripts/: dedup_syntheses.py  deploy_s3.py  export_data.py  import_data.py  render_static.py  run_embeddings.py  run_fetch.py  run_pipeline.py  run_server.py  run_synthesis.py  visualize_clusters.py
src/: __init__.py  config.py
src/clustering/: __init__.py  story_grouper.py
src/embeddings/: __init__.py  client.py  generator.py
src/fetcher/: __init__.py  rss.py
src/models/: __init__.py  article.py
src/storage/: __init__.py  opensearch.py
src/synthesis/: __init__.py  llm_client.py  summarizer.py
src/web/: __init__.py  app.py  routes.py
src/web/static/: app.js  manifest.json  style.css  sw.js
src/web/templates/: about.html  base.html  column.html  front_page.html  story.html
terraform/: .gitignore  acm.tf  cloudfront-function.tf  cloudfront.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
